2013-07-19  Niibe Yutaka  <gniibe@fsij.org>

	Port to Chopstx.
	* src/Makefile.in: Change for Chopstx.
	* src/configure: Likewise.
	* src/gnuk.h, src/gnuk.ld.in: Likewise.
	* src/ac.c: Include stdint.h and string.h, not ch.h.
	* src/call-rsa.c, src/debug.c, src/flash.c: Likewise.
	* src/call-ec_p256.c, src/usb_desc.c
	* src/openpgp-do.c, src/random.c: Likewise.
	* src/openpgp.c: Likewise.  Use eventflag of Chopstx.
	* src/usb-icc.c: Likewise.
	* src/usb_ctrl.c: Update for Chopstx.
	* src/debug.h: New.
	* src/stdlib.h: Use gnuk_malloc and gnuk_free for malloc/free.
	* src/config.h.in: Move FLASH_PAGE_SIZE in board.h.
	* polarssl/library/aes.c (FT0, FT1, FT2): Export (for sys 2.0).
	* src/main.c (struct stdout, _write, EP3_IN_Callback)
	(EP5_OUT_Callback): Rewrite for Chopstx.  No independent thread
	any more.
	(display_fatal_code, emit_led, display_status_code, led_blink):
	Use primitives of Chopstx.
	(main): Changes for Chopstx.
	(gnuk_malloc_init, sbrk, gnuk_malloc, gnuk_free): New.

2013-06-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c, src/sys.h, src/neug.c, src/adc.h
	* src/adc_stm32f103.c, src/usb_stm32f103.c: Update from NeuG 0.10.
	* src/stm32f103.h: New.  From NeuG 0.10.

2013-06-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_write_prvkey, proc_key_import, gpg_do_table)
	(gpg_do_public_key) [RSA_AUTH]: Conditional compilation for RSA/ECDSA.
	* src/openpgp.c (cmd_internal_authenticate) [RSA_AUTH]: Likewise.

	* src/modp256.c (p256): Add const qualifier.

2013-03-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (random_gen): New (was: random_byte).

	* src/call-rsa.c (rsa_sign): Follow change of API.
	(rsa_genkey): Use random_gen.
	(modulus_calc, rsa_decrypt, rsa_verify): Follow change of API.
	* src/openpgp-do.c (encrypt, decrypt): Likewise.

	* polarssl/include/polarssl/aes.h: Updated from PolarSSL 1.2.6.
	* polarssl/library/aes.c: Ditto.
	* polarssl/include/polarssl/rsa.h: Ditto.
	* polarssl/library/rsa.c: Ditto.